test/shared/mdapioutput/objects/AppLoadedCSS__mdt.object
<CustomObject>
    <description>Allows to select which additional CSS are loaded by the WebApp  (tech: ltngRequireWebApp component)</description>
    <label>Loaded CSS</label>
    <pluralLabel>Loaded CSS</pluralLabel>
    <fields>
        <fullName>CssPath__c</fullName>
        <description>Path of the css file inside the Resource
Example: /resource/css/irm-style-clientName.css</description>
        <inlineHelpText>Path of the css file inside the Resource
Example: /resource/css/irm-style-clientName.css</inlineHelpText>
        <label>CssPath</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Activated or not</description>
        <inlineHelpText>Activated or not</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoadingOrder__c</fullName>
        <description>Order used to load the css file</description>
        <inlineHelpText>Order used to load the css file</inlineHelpText>
        <label>LoadingOrder</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>Developer name of the static resource where the css file to load is</description>
        <inlineHelpText>Developer name of the static resource where the css file to load is</inlineHelpText>
        <label>Resource</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserTheme__c</fullName>
        <description>User theme matching this CSS to load ( update user information to set it )</description>
        <inlineHelpText>User theme matching this CSS to load ( update user information to set it )</inlineHelpText>
        <label>UserTheme</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>BaseBlue</fullName>
                </value>
                <value>
                    <fullName>BaseBlueLight</fullName>
                </value>
                <value>
                    <fullName>BaseDXC</fullName>
                </value>
                <value>
                    <fullName>BaseFlat</fullName>
                </value>
                <value>
                    <fullName>BaseGreen</fullName>
                </value>
                <value>
                    <fullName>BaseGreenLight</fullName>
                </value>
                <value>
                    <fullName>BaseKhaki</fullName>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                </value>
                <value>
                    <fullName>DXC</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Lelamanul</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>